# naia

./: .gitignore  .gitpod.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEV_PROCESS.md  E2E_INVESTIGATION_2025-01-27.md  FEATURES.md  INTERIOR_VISIBILITY_REFACTOR.md  LICENSE-APACHE.txt  LICENSE-MIT.txt  NEXT_STEPS.md  NOTES.md  PLAN.md  README.md  REFACTOR_PLAN.md  SECURITY.md  SPEC_TOOL_MIGRATION_PLAN.md  TEST_HARNESS_SPEC.md  TEST_TIME_SIM_PLAN_V2.md  crucible.toml  deny.toml  package.json  resolved_plan.json  run_report.json  rust-analyzer.toml  rustfmt.toml  rustfmt.yml
benches/: Cargo.toml  README.md
benches/benches/: main.rs
benches/examples/: compression_audit.rs  idle_distribution.rs  phase1_scan_counters.rs  phase3_tick_breakdown.rs  phase4_tick_internals.rs  phase6_paint_rect_audit.rs  static_split_report.rs
benches/src/: bench_protocol.rs  lib.rs  serde_quat.rs
benches/tests/: component_kind_wire.rs  local_entity_wire.rs  many_kinds_no_64_cap.rs  static_split_bytes.rs
client/: Cargo.toml  rustfmt.toml
client/src/: bandwidth_monitor.rs  channel_tick_buffer.rs  channel_tick_buffer_sender.rs  client.rs  client_actor_manager.rs  client_actor_message.rs  client_config.rs  client_connection_state.rs  client_entity_manager.rs  client_entity_message.rs  client_event.rs  client_packet_writer.rs  client_replicate_manager.rs  client_replicate_message.rs  client_state_manager.rs  client_state_message.rs  client_tick_manager.rs  command_history.rs  command_receiver.rs  command_sender.rs  component_record.rs  connection.rs  connection_state.rs  constants.rs  counters.rs  dual_command_receiver.rs  dual_command_sender.rs  entity_action.rs  entity_manager.rs  entity_message_packet_writer.rs  entity_message_sender.rs  entity_record.rs  entity_ref.rs  error.rs  event.rs  events.rs  handshake_manager.rs  interpolation_manager.rs  io.rs  lib.rs  (+20 more)
client/transport/: Cargo.toml
default_world/: Cargo.toml
default_world/src/: component_ref.rs  entity.rs  lib.rs  world.rs
demo/shared/: Cargo.toml
derive/: Cargo.toml
derive/src/: actor.rs  actor_type.rs  entity.rs  entity_type.rs  event.rs  event_type.rs  lib.rs  protocol_type.rs  protocolize.rs  replicate.rs  state.rs  state_type.rs  utils.rs
examples/server/: Cargo.toml  README.md
examples/shared/: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: handshake_header.rs  header_deserialize.rs  packet_deserialize.rs  replication_decode.rs  serde_quantized.rs
iai/: Cargo.toml
iai/benches/: dirty_receiver.rs  immutable_dispatch.rs  spawn_coalesced.rs  tick_hot_path.rs  update_dispatch.rs
metrics/: Cargo.toml
metrics/src/: client.rs  lib.rs  names.rs  server.rs
namako/: Cargo.toml
namako/src/: bindings.rs  main.rs  manifest.rs  run.rs  world.rs
namako/tests/: namako_integration_test.rs
serde/: Cargo.toml  TODO.txt
serde/derive/: Cargo.toml
serde/src/: TODO.txt  bit_reader.rs  bit_writer.rs  consts.rs  error.rs  impls.rs  integer.rs  lib.rs  reader_writer.rs  serde.rs  traits.rs  types.rs
serde/tests/: derive_enum.rs  derive_struct.rs  derive_tuple_struct.rs  derive_unit_struct.rs  integer.rs  reader_writer.rs  tests.rs
server/: Cargo.toml
server/src/: bandwidth_monitor.rs  cache_map.rs  client_connection.rs  command_receiver.rs  component_diff_handler.rs  connection.rs  ecs_record.rs  entity_action.rs  entity_action_packet_writer.rs  entity_component_record.rs  entity_manager.rs  entity_message_receiver.rs  entity_message_waitlist.rs  entity_owner.rs  entity_record.rs  entity_ref.rs  entity_scope_map.rs  error.rs  event.rs  events.rs  global_diff_handler.rs  global_entity_record.rs  handshake_manager.rs  historian.rs  interval.rs  io.rs  keys.rs  lib.rs  local_component_record.rs  local_entity_record.rs  locality_status.rs  mut_channel.rs  mut_handler.rs  mutcaster.rs  naia_server.rs  packet_writer.rs  ping_manager.rs  property_mutator.rs  replica_action.rs  replica_manager.rs  (+19 more)
server/transport/: Cargo.toml
shared/: Cargo.toml
shared/derive/: Cargo.toml
shared/parse/: Cargo.toml
shared/serde/: Cargo.toml  TODO.txt
shared/src/: ack_manager.rs  bandwidth_monitor.rs  base_connection.rs  bigmap.rs  channel_config.rs  channel_message_manager.rs  component_record.rs  component_ref.rs  compression_config.rs  compression_manager.rs  config.rs  connection.rs  connection_config.rs  constants.rs  decoder.rs  diff_mask.rs  doublemap.rs  duration.rs  encoder.rs  entity_action_type.rs  entity_handle.rs  entity_property.rs  entity_type.rs  game_time.rs  host_tick_manager.rs  host_type.rs  http_utils.rs  instant.rs  key_generator.rs  key_store.rs  keys.rs  lib.rs  manager_type.rs  manifest.rs  message_list_header.rs  message_manager.rs  message_packet_writer.rs  monitor_config.rs  named.rs  ordered_reliable_channel.rs  (+33 more)
shared/tests/: derive_enum.rs  derive_replicate.rs  derive_struct.rs  derive_tuple_struct.rs  derive_unit_struct.rs  key_generator.rs  prototype.rs
socket/client/: Cargo.toml
socket/server/: Cargo.toml
socket/shared/: Cargo.toml
specs/: 0_README.md  10_entity_publication.md  11_entity_delegation.md  12_entity_authority.md  13_server_events_api.md  14_client_events_api.md  15_world_integration.md  2_connection_lifecycle.md  3_transport.md  4_messaging.md  5_time_ticks_commands.md  6_observability_metrics.md  7_entity_scopes.md  8_entity_replication.md  CONTRACT_REGISTRY.md  Cargo.toml  DEVELOPER_CONTRACT.md  NAIA_SPECS.md  NAIA_SPEC_DRIVEN_DEVELOPMENT.md  OWNERSHIP_DELEGATION_AUTH.md  README.md  SPEC_CERTIFICATION_PLAN.md  TRACEABILITY.md  _template.md  build_spec_bundle.sh  client_events_api.md  connection_lifecycle.md  entity_authority.md  entity_delegation.md  entity_ownership.md  entity_publication.md  entity_replication.md  entity_scopes.md  messaging.md  observability_metrics.md  spec_index.py  spec_tool.sh  spec_tool_test.sh  time_ticks_commands.md  transport.md
test/: Cargo.toml  E2E_TEST_AUDIT.md  E2E_TEST_PLAN.md  LINK_CONDITIONER_ISSUE_ANALYSIS.md  NEXT_STEPS.md  TIER1_IMPLEMENTATION_STATUS.md  TODO_ANALYSIS_AND_PRIORITIZATION.md  run_report.json
(+1895 files in other folders)
