[workspace]
resolver = "2"
members = [
    "client",
    "server",
    "shared",
    "derive",
    "demos/demo_utils/demo_world",
    "demos/demo_utils/dev_http_server",
    "demos/demo_utils/empty_world",
    "adapters/hecs/client",
    "adapters/hecs/server",
    "adapters/hecs/shared",
    "adapters/bevy/client",
    "adapters/bevy/server",
    "adapters/bevy/shared",
    "demos/basic/server",
    "demos/basic/shared",
    "demos/basic/client/app",
    "demos/basic/client/wasm_bindgen",
    "demos/basic/client/miniquad",
    "demos/macroquad/server",
    "demos/macroquad/shared",
    "demos/macroquad/client",
    "demos/bevy/server",
    "demos/bevy/shared",
    "demos/bevy/client",
    "demos/tickless/server",
    "demos/tickless/shared",
    "demos/tickless/client",
    "demos/hecs/server",
    "demos/hecs/shared",
    "demos/hecs/client",
    ]
