[workspace]
resolver = "2"
members = [
    "client",
    "server",
    "shared",
    "shared/derive",
    "shared/parse",
    "shared/serde",
    "shared/serde/derive",
    "socket/client",
    "socket/server",
    "socket/shared",
    "test",
    "adapters/hecs/client",
    "adapters/hecs/server",
    "adapters/hecs/shared",
    "adapters/bevy/client",
    "adapters/bevy/server",
    "adapters/bevy/shared",
    "demos/demo_utils/demo_world",
    "demos/demo_utils/empty_world",
    "demos/basic/server",
    "demos/basic/shared",
    "demos/basic/client/app",
    "demos/basic/client/wasm_bindgen",
    "demos/basic/client/miniquad",
    "demos/bevy/server",
    "demos/bevy/shared",
    "demos/bevy/client",
    "demos/hecs/server",
    "demos/hecs/shared",
    "demos/hecs/client",
    "demos/macroquad/server",
    "demos/macroquad/shared",
    "demos/macroquad/client",
    "demos/socket/server",
    "demos/socket/shared",
    "demos/socket/client/app",
    "demos/socket/client/wasm_bindgen",
    "demos/socket/client/miniquad",
]
