[package]
name = "naia-client"
version = "0.23.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
description = "Provides a cross-platform client that can send/receive messages to/from a server, and has a pool of in-scope entities/components that is synced with the server."
documentation = "https://docs.rs/naia-client"
homepage = "https://github.com/naia-lib/naia"
repository = "https://github.com/naia-lib/naia"
readme = "../README.md"
keywords = ["wasm", "webrtc", "udp", "networking", "gamedev"]
categories = ["network-programming", "game-development", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
wbindgen = [ "naia-shared/wbindgen", "naia-client-socket?/wbindgen" ]
mquad = [ "naia-shared/mquad", "naia-client-socket?/mquad" ]
bevy_support = ["naia-shared/bevy_support"]
zstd_support = ["naia-shared/zstd_support"]
transport_webrtc = [ "naia-client-socket" ]
transport_udp = [ "local_ipaddress", "naia-shared/advanced_handshake", "naia-shared/transport_udp", "http", "base64" ]

[dependencies]
naia-shared = { version = "0.23", path = "../shared" }
naia-client-socket = { version = "0.23", path = "../socket/client", optional = true }
local_ipaddress = { version = "0.1", optional = true }
cfg-if = { version = "1.0" }
log = { version = "0.4" }
http = { version = "1.2", optional = true }
base64 = { version = "0.13", optional = true }