[package]
name = "naia-derive"
version = "0.1.1"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
description = "Procedural macros to simplify implementation of Naia Event & Actor traits"
documentation = "https://docs.rs/naia-derive"
homepage = "https://github.com/naia-rs/naia"
repository = "https://github.com/naia-rs/naia"
readme = "../README.md"
keywords = ["webrtc", "udp", "wasm", "networking", "gamedev"]
license = "MIT OR Apache-2.0"
categories = ["network-programming", "game-development", "wasm", "web-programming"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[features]

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
