[package]
name = "naia-derive"
version = "0.7.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
description = "Procedural macros to simplify implementation of Naia ReplicateSafe & ProtocolType traits"
documentation = "https://docs.rs/naia-derive"
homepage = "https://github.com/naia-rs/naia"
repository = "https://github.com/naia-rs/naia"
readme = "../README.md"
keywords = ["webrtc", "udp", "wasm", "networking", "gamedev"]
license = "MIT OR Apache-2.0"
categories = ["network-programming", "game-development", "wasm", "web-programming"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[features]

[dependencies]
proc-macro2 = "1.0"
syn = { version = "=1.0", features = ["clone-impls"] }
quote = "1.0"
