[package]
name = "naia_namako"
version = "0.1.0"
edition = "2021"
publish = false
description = "NPAP adapter for Naia BDD tests"

[[bin]]
name = "naia_namako"
path = "src/main.rs"

[dependencies]
# Core namako library with NPAP types
namako = { path = "../../namako", features = ["npap", "macros"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Test harness from naia
naia-test = { path = "../test" }
