[package]
name = "naia-server"
version = "0.21.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
description = "A server that uses either UDP or WebRTC communication to send/receive messages to/from connected clients, and syncs registered Entities/Components to clients to whom they are in-scope."
documentation = "https://docs.rs/naia-server"
homepage = "https://github.com/naia-lib/naia"
repository = "https://github.com/naia-lib/naia"
readme = "../README.md"
keywords = ["webrtc", "udp", "server", "networking", "gamedev"]
categories = ["network-programming", "game-development", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
bevy_support = ["naia-shared/bevy_support", "bevy_ecs"]
zstd_support = ["naia-shared/zstd_support"]
transport_webrtc = [ "naia-server-socket" ]
transport_udp = []

[dependencies]
naia-shared = { version = "0.21", path = "../shared" }
naia-server-socket = { version = "0.20", path = "../socket/server", optional = true }
bevy_ecs = { version = "0.10", default_features = false, optional = true }
cfg-if = { version = "1.0" }
log = { version = "0.4" }
ring = { version = "0.16.15" }
fastrand = { version = "1.7.0" }
