[package]
name = "naia-shared"
version = "0.14.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
description = "Common functionality shared between naia-server & naia-client crates"
documentation = "https://docs.rs/naia-shared"
homepage = "https://github.com/naia-rs/naia"
repository = "https://github.com/naia-rs/naia"
readme = "../README.md"
keywords = ["webrtc", "udp", "wasm", "networking", "gamedev"]
categories = ["network-programming", "game-development", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
wbindgen = [ "naia-socket-shared/wbindgen", "js-sys" ]
mquad = [ "naia-socket-shared/mquad" ]
bevy_support = [ "bevy_ecs" ]
zstd_support = [ "zstd" ]

[dependencies]
naia-socket-shared = { version = "0.10", path = "../socket/shared" }
naia-derive = { version = "0.13", path = "derive" }
naia-serde = { version = "0.13", path = "serde" }
log = { version = "0.4" }
cfg-if = { version = "1.0" }
js-sys = { version = "0.3", optional = true }
bevy_ecs = { version = "0.9", default_features = false, optional = true }
zstd = { version = "0.12.0", optional = true }
