[package]
name = "naia-shared"
version = "0.24.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
description = "Common functionality shared between naia-server & naia-client crates"
documentation = "https://docs.rs/naia-shared"
homepage = "https://github.com/naia-lib/naia"
repository = "https://github.com/naia-lib/naia"
readme = "../README.md"
keywords = ["webrtc", "udp", "wasm", "networking", "gamedev"]
categories = ["network-programming", "game-development", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
wbindgen = [ "naia-socket-shared/wbindgen", "js-sys" ]
mquad = [ "naia-socket-shared/mquad" ]
test_time = [ "naia-socket-shared/test_time" ]
bevy_support = [ "bevy_ecs" ]
zstd_support = [ "zstd" ]
transport_udp = [ "http" ]
transport_local = [ "http", "tokio", "once_cell" ]

# this should be used when the underlying transport does not handle it for you (i.e. UDP)
advanced_handshake = []
interior_visibility = []

[dependencies]
naia-socket-shared = { version = "0.24", path = "../socket/shared" }
naia-derive = { version = "0.24", path = "derive" }
naia-serde = { version = "0.24", path = "serde" }
log = { version = "0.4" }
cfg-if = { version = "1.0" }
js-sys = { version = "0.3.64", optional = true }
bevy_ecs = { version = "0.17", default-features = false, optional = true }
zstd = { version = "0.12.2", optional = true }
http = { version = "1.2", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"], optional = true }
once_cell = { version = "1", optional = true }