[package]
name = "naia_spec_tool"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "spec_tool"

[[bin]]
name = "spec_tool"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
colored = "2.0" # For colored output matching bash script
chrono = "0.4.42"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
insta = "1.34"
tempfile = "3.8"
