[package]
name = "naia-test"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[features]

[dependencies]
naia-server = { path = "../server", features = ["transport_local", "interior_visibility"] }
naia-client = { path = "../client", features = ["transport_local", "interior_visibility"] }
naia-shared = { path = "../shared", features = ["transport_local", "interior_visibility"] }

naia-demo-world = { path = "../demos/demo_utils/demo_world" }

log = "0.4"

