[package]
name = "naia-test"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[features]

[dependencies]
naia-server = { path = "../server", features = ["transport_local", "interior_visibility", "test_time", "bevy_support"] }
naia-client = { path = "../client", features = ["transport_local", "interior_visibility", "test_time", "bevy_support"] }
naia-shared = { path = "../shared", features = ["transport_local", "interior_visibility", "test_time", "bevy_support"] }

naia-demo-world = { path = "../demos/demo_utils/demo_world" }

bevy_ecs = { version = "0.16", default-features = false }

log = "0.4"

