[package]
name = "naia-example-shared"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
edition = "2018"

[dependencies]
naia-shared = { path = "../naia-shared" } # { git = "https://github.com/connorcarpenter/naia-shared" } #
naia-derive = { path = "../naia-derive" }
cfg-if = "*"
log = "0.4"