[package]
name = "naia-derive"
version = "0.10.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
description = "Procedural macros to simplify implementation of Naia Replicate & Protocolize traits"
documentation = "https://docs.rs/naia-derive"
homepage = "https://github.com/naia-rs/naia"
repository = "https://github.com/naia-rs/naia"
keywords = ["webrtc", "udp", "wasm", "networking", "gamedev"]
categories = ["network-programming", "game-development", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[features]

[dependencies]
naia-serde-derive = { version = "0.10", path = "../serde/derive" }
naia-parse = { version = "0.10", path = "../parse" }
proc-macro2 = "1.0"
syn = { version = "1.0.86", features = ["clone-impls"] }
quote = "1.0"
