[package]
name = "naia-server-socket"
version = "0.13.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
description = "An abstraction to provide a common API over either a UDP socket or a service that can establish WebRTC connections"
documentation = "https://docs.rs/naia-server-socket"
homepage = "https://github.com/naia-rs/naia"
repository = "https://github.com/naia-rs/naia"
keywords = ["webrtc", "udp", "server", "gamedev", "networking"]
categories = ["network-programming", "game-development", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
naia-socket-shared = { version = "0.10", path = "../shared" }
log = { version = "0.4" }
futures-channel = { version = "0.3", features = ["sink"] }
futures-core = { version = "0.3" }
futures-util = { version = "0.3", features = ["sink"] }
smol = { version = "1.2.4" }
once_cell = { version = "1.4.1" }
webrtc-unreliable = { version = "0.5.2" }
async-dup = { version = "1.2.2" }
http = { version = "0.2" }