[package]
name = "naia-bench"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false
description = "Naia domain win-checks: Win-2–5, phase thresholds, halo capacity budgets"

[[bin]]
name = "naia_bench"
path = "src/main.rs"

[dependencies]
bench_core = { path = "../../../slag/crates/bench_core" }
serde_json = "1"
