[package]
name = "naia-bench-report"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false
description = "Reads cargo-criterion JSON output and emits a self-contained HTML benchmark report"

[[bin]]
name = "naia_bench_report"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
